--- a/SegundoParcialLp2.csproj
+++ b/SegundoParcialLp2.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Data\Model\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.3.0" />
+  </ItemGroup>
+
 </Project>
